Style: add max-width and margin auto to stop page over stretching when zooming

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,12 @@
     box-sizing: border-box; 
 }
 
+body {
+    background-color: #d7d6d681;
+    max-width: 2000px;
+    margin: 0 auto;
+}
+
 /* newsletter */
 .nl-input-con {
     width: 90%;
